# unity

./: .gitignore  CONTRIBUTING.md  README.md  compose.yaml
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/accounts/: __init__.py  access.py  admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_churchmembership_person.py  __init__.py
backend/audit/: __init__.py  admin.py  apps.py  context.py  middleware.py  models.py  services.py  signals.py
backend/care/: __init__.py  admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  admin.py  asgi.py  urls.py  wsgi.py
backend/events/: __init__.py  admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/groups/: __init__.py  admin.py  models.py
backend/people/: __init__.py  admin.py  forms.py  importer.py  lifecycle.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/tenancy/: __init__.py  admin.py  api.py  middleware.py  models.py  permissions.py
backend/tests/: test_accounts.py  test_admin.py  test_audit.py  test_auth.py  test_auto_follow_up.py  test_church_scoping.py  test_consent.py  test_domain_models.py  test_event_api.py  test_event_registration_api.py  test_follow_up_api.py  test_health.py  test_interaction_api.py  test_manual_checkin_api.py  test_permission_matrix.py  test_person_api.py  test_person_csv_import.py  test_person_lifecycle.py  test_pilot_flow.py  test_walk_in_api.py
(+80 files in other folders)
