[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-backend"
version = "0.1.0"
description = "Church membership and discipleship management backend"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.15,<3.17",
    "django-environ>=0.11,<0.13",
    "psycopg[binary]>=3.2,<3.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.10,<26",
    "pytest>=8.3,<9",
    "pytest-django>=4.9,<5",
    "ruff>=0.9,<0.15",
]
prod = ["gunicorn>=23,<24"]

[tool.setuptools.packages.find]
include = ["accounts*", "care*", "config*", "events*", "groups*", "people*", "tenancy*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]
"care/models.py" = ["DJ001"]
"events/models.py" = ["DJ001"]
"groups/models.py" = ["DJ001"]
"people/models.py" = ["DJ001"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"
